docs/7.53/md/abensql_functions.md
---
title: "SQL Functions"
description: |
  The following sections summarize the built-in SQL functions supported by ABAP CDS(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_cds_glosry.htm 'Glossary Entry') and ABAP SQL(https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenopen_sql_glosry.htm 'Glossary Entry')
version: "7.53"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions.htm"
abapFile: "abensql_functions.htm"
keywords: ["do", "try", "data", "types", "abensql", "functions"]
---

* * *

AS ABAP Release 753, ©Copyright 2019 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_dictionary.htm) →  [Built-In Functions in ABAP Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_functions.htm) → 

SQL Functions

The following sections summarize the built-in SQL functions supported by [ABAP CDS](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_cds_glosry.htm "Glossary Entry") and [ABAP SQL](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenopen_sql_glosry.htm "Glossary Entry"), across all platforms.

-   [SQL functions for numeric values](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_numeric.htm)

-   [SQL functions for strings](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_string.htm)

-   [SQL functions for null values](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_null.htm)

Descriptions of the potential operands and data types can be found in the corresponding documentation for [ABAP CDS](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abencds_f1_sql_functions.htm) and [ABAP SQL](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenopen_sql_functions.htm).

Note

Some SQL functions are also implemented for use in the [table buffer](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abentable_buffer_glosry.htm "Glossary Entry") on AS ABAP. [Table buffering](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensap_buffering_glosry.htm "Glossary Entry") is not bypassed when [these functions](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenbuffer_expressions.htm) are used.

Continue
[SQL Functions for Numeric Values](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_numeric.htm)
[SQL Functions for Strings](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_string.htm)
[SQL Functions for Null Values](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abensql_functions_null.htm)